--- a/src/Calculator/Views/CalculatorScientificOperators.xaml
+++ b/src/Calculator/Views/CalculatorScientificOperators.xaml
@@ -521,7 +521,7 @@
 
                                 <controls:CalculatorButton x:Name="invsinButton"
                                                            x:Uid="invsinButton"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invsinButton"
                                                            ButtonId="InvSin"
                                                            Click="flyoutButton_Clicked"
@@ -531,7 +531,7 @@
                                 <controls:CalculatorButton x:Name="invcosButton"
                                                            x:Uid="invcosButton"
                                                            Grid.Column="1"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invcosButton"
                                                            ButtonId="InvCos"
                                                            Click="flyoutButton_Clicked"
@@ -541,7 +541,7 @@
                                 <controls:CalculatorButton x:Name="invtanButton"
                                                            x:Uid="invtanButton"
                                                            Grid.Column="2"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invtanButton"
                                                            ButtonId="InvTan"
                                                            Click="flyoutButton_Clicked"
@@ -552,7 +552,7 @@
                                 <controls:CalculatorButton x:Name="invsecButton"
                                                            x:Uid="invsecButton"
                                                            Grid.Row="1"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invsecButton"
                                                            ButtonId="InvSec"
                                                            Click="flyoutButton_Clicked"
@@ -563,7 +563,7 @@
                                                            x:Uid="invcscButton"
                                                            Grid.Row="1"
                                                            Grid.Column="1"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invcscButton"
                                                            ButtonId="InvCsc"
                                                            Click="flyoutButton_Clicked"
@@ -574,7 +574,7 @@
                                                            x:Uid="invcotButton"
                                                            Grid.Row="1"
                                                            Grid.Column="2"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invcotButton"
                                                            ButtonId="InvCot"
                                                            Click="flyoutButton_Clicked"
@@ -599,7 +599,7 @@
 
                                 <controls:CalculatorButton x:Name="sinhButton"
                                                            x:Uid="sinhButton"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="sinhButton"
                                                            ButtonId="Sinh"
                                                            Click="flyoutButton_Clicked"
@@ -609,7 +609,7 @@
                                 <controls:CalculatorButton x:Name="coshButton"
                                                            x:Uid="coshButton"
                                                            Grid.Column="1"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="coshButton"
                                                            ButtonId="Cosh"
                                                            Click="flyoutButton_Clicked"
@@ -619,7 +619,7 @@
                                 <controls:CalculatorButton x:Name="tanhButton"
                                                            x:Uid="tanhButton"
                                                            Grid.Column="2"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="tanhButton"
                                                            ButtonId="Tanh"
                                                            Click="flyoutButton_Clicked"
@@ -630,7 +630,7 @@
                                 <controls:CalculatorButton x:Name="sechButton"
                                                            x:Uid="sechButton"
                                                            Grid.Row="1"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="sechButton"
                                                            ButtonId="Sech"
                                                            Click="flyoutButton_Clicked"
@@ -641,7 +641,7 @@
                                                            x:Uid="cschButton"
                                                            Grid.Row="1"
                                                            Grid.Column="1"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="cschButton"
                                                            ButtonId="Csch"
                                                            Click="flyoutButton_Clicked"
@@ -652,7 +652,7 @@
                                                            x:Uid="cothButton"
                                                            Grid.Row="1"
                                                            Grid.Column="2"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="cothButton"
                                                            ButtonId="Coth"
                                                            Click="flyoutButton_Clicked"
@@ -676,7 +676,7 @@
                                 </Grid.ColumnDefinitions>
                                 <controls:CalculatorButton x:Name="invsinhButton"
                                                            x:Uid="invsinhButton"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invsinhButton"
                                                            ButtonId="InvSinh"
                                                            Click="flyoutButton_Clicked"
@@ -686,7 +686,7 @@
                                 <controls:CalculatorButton x:Name="invcoshButton"
                                                            x:Uid="invcoshButton"
                                                            Grid.Column="1"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invcoshButton"
                                                            ButtonId="InvCosh"
                                                            Click="flyoutButton_Clicked"
@@ -696,7 +696,7 @@
                                 <controls:CalculatorButton x:Name="invtanhButton"
                                                            x:Uid="invtanhButton"
                                                            Grid.Column="2"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invtanhButton"
                                                            ButtonId="InvTanh"
                                                            Click="flyoutButton_Clicked"
@@ -707,7 +707,7 @@
                                 <controls:CalculatorButton x:Name="invsechButton"
                                                            x:Uid="invsechButton"
                                                            Grid.Row="1"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invsechButton"
                                                            ButtonId="InvSech"
                                                            Click="flyoutButton_Clicked"
@@ -718,7 +718,7 @@
                                                            x:Uid="invcschButton"
                                                            Grid.Row="1"
                                                            Grid.Column="1"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invcschButton"
                                                            ButtonId="InvCsch"
                                                            Click="flyoutButton_Clicked"
@@ -729,7 +729,7 @@
                                                            x:Uid="invcothButton"
                                                            Grid.Row="1"
                                                            Grid.Column="2"
-                                                           Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                                           Style="{StaticResource OperatorButtonStyle}"
                                                            AutomationProperties.AutomationId="invcothButton"
                                                            ButtonId="InvCoth"
                                                            Click="flyoutButton_Clicked"
@@ -850,11 +850,10 @@
                       x:Uid="shiftButton"
                       Grid.Row="1"
                       Style="{StaticResource CaptionToggleEmphasizedButtonStyle}"
-                      FontFamily="{StaticResource CalculatorFontFamily}"
                       FontSize="20"
                       AutomationProperties.AutomationId="shiftButton"
                       Checked="shiftButton_Check"
-                      Content="&#xE752;"
+                      Content="2nd"
                       IsEnabledChanged="shiftButton_IsEnabledChanged"
                       Unchecked="shiftButton_Check"/>
 
