--- a/src/Calculator/Views/CalculatorScientificOperators.xaml
+++ b/src/Calculator/Views/CalculatorScientificOperators.xaml
@@ -368,25 +368,10 @@
                                    Grid.ColumnSpan="5"
                                    Background="{ThemeResource AppOverflowOperatorBackground}"
                                    AutomationProperties.HeadingLevel="Level1">
-            <Button x:Name="trigButton"
-                    x:Uid="trigButton"
-                    Style="{StaticResource OverflowButtonStyle}">
-                <StackPanel Orientation="Horizontal">
-                    <FontIcon x:Name="trigFontIcon"
-                              Margin="6,0,6,0"
-                              FontFamily="{StaticResource CalculatorFontFamily}"
-                              FontSize="12"
-                              Glyph="&#xF1AA;"/>
-                    <TextBlock x:Name="trigTextBlock"
-                               x:Uid="trigTextBlock"
-                               VerticalAlignment="Center"/>
-                    <FontIcon x:Name="trigChevron"
-                              Margin="6,0,6,0"
-                              VerticalAlignment="Center"
-                              FontFamily="{StaticResource CalculatorFontFamily}"
-                              FontSize="12"
-                              Glyph="&#xE70D;"/>
-                </StackPanel>
+            <controls:OverflowButton x:Name="trigButton"
+                                     x:Uid="trigButton"
+                                     Style="{StaticResource OverflowButtonStyle}"
+                                     Glyph="&#xF1AA;">
                 <Button.Flyout>
                     <Flyout x:Name="Trigflyout"
                             FlyoutPresenterStyle="{ThemeResource OverflowFlyoutStyle}"
@@ -740,27 +725,11 @@
                         </Grid>
                     </Flyout>
                 </Button.Flyout>
-            </Button>
-            <Button x:Name="funcButton"
-                    x:Uid="funcButton"
-                    Style="{StaticResource OverflowButtonStyle}">
-                <StackPanel Orientation="Horizontal">
-                    <FontIcon x:Name="funcFontIcon"
-                              Margin="6,0,6,0"
-                              VerticalAlignment="Center"
-                              FontFamily="{StaticResource CalculatorFontFamily}"
-                              FontSize="12"
-                              Glyph="&#xF1AA;"/>
-                    <TextBlock x:Name="functionTextBlock"
-                               x:Uid="functionTextBlock"
-                               VerticalAlignment="Center"/>
-                    <FontIcon x:Name="funcChevron"
-                              Margin="6,0,6,0"
-                              VerticalAlignment="Center"
-                              FontFamily="{StaticResource CalculatorFontFamily}"
-                              FontSize="12"
-                              Glyph="&#xE70D;"/>
-                </StackPanel>
+            </controls:OverflowButton>
+            <controls:OverflowButton x:Name="funcButton"
+                                     x:Uid="funcButton"
+                                     Style="{StaticResource OverflowButtonStyle}"
+                                     Glyph="&#xF1AA;">
                 <Button.Flyout>
                     <Flyout x:Name="FuncFlyout"
                             FlyoutPresenterStyle="{ThemeResource OverflowFlyoutStyle}"
@@ -843,7 +812,7 @@
                         </Grid>
                     </Flyout>
                 </Button.Flyout>
-            </Button>
+            </controls:OverflowButton>
         </controls:OverflowListView>
 
         <ToggleButton x:Name="shiftButton"
